--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-leaflet": "^4.2.1",
     "react-select": "^5.8.0",
     "recharts": "^2.10.3",
+    "swal": "^0.1.0",
     "sweetalert": "^2.1.2",
     "swiper": "^11.0.4",
     "tailwindcss": "^3.3.0"
