--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
+# MONGO_URL=mongodb://localhost:27017/set-coffee
+# AccessTokenSecretKey=sdfgdsfgsdfgsdffgsdfg
+
+
+
 MONGO_URL=mongodb://localhost:27017/set-coffee
 AccessTokenSecretKey=sdfgdsfgsdfgsdffgsdfg
+RefreshTokenSecretKey=یه_رشته_خیلی_قوی
