--- a/package.json
+++ b/package.json
@@ -10,23 +10,23 @@
   },
   "dependencies": {
     "aos": "^3.0.0-beta.6",
-    "bcryptjs": "^3.0.2",
+    "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
-    "mongoose": "^8.18.0",
+    "mongoose": "^8.2.0",
     "next": "13.4.0",
-    "react": "latest",
-    "react-dom": "latest",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-icons": "^4.12.0",
     "react-leaflet": "^4.2.1",
     "react-select": "^5.8.0",
     "recharts": "^2.10.3",
-    "swal": "^0.1.0",
     "sweetalert": "^2.1.2",
     "swiper": "^11.0.4",
     "tailwindcss": "^3.3.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.21"
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.4.26"
   }
 }
